--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link text-muted" href="#">Inicio</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Regimenes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Personas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Fuentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#Regimes-link">Regimenes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#Que es un regimen link">¿Que es un regimen?</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#Fuentes-link">Fuentes</a></li>
                 </ul>
 
                 <div class="d-flex align-items-center ms-3">
@@ -84,7 +84,7 @@
         <div class="container py-5">
             <div class="row align-items-center text-center text-md-start">
                 <div class="col-md-6" data-aos="fade-right">
-                    <h2 class="fw-bold text-dark fs-2">
+                    <h2 class="fw-bold text-dark fs-2" id="Que es un regimen link">
                         ¿Que es <br> un regimen retributario?
                     </h2>
                 </div>
@@ -100,7 +100,7 @@
 
 <!-- Regimenes -->
     <div class="container py-5">
-        <h2 class="fw-bold text-center mb-4">Régimenes Tributarios</h2>
+        <h2 class="fw-bold text-center mb-4"  id="Regimes-link">Régimenes Tributarios</h2>
         <div class="row">
 
             <div class="col-md-3 text-center" data-aos="fade-up">
@@ -138,7 +138,7 @@
     </div>
     <!-- Fuentes -->
     <div class="container py-5">
-        <h2 style="text-align: center;" class="fw-bold mb-4">Principales fuentes de información</h2>
+        <h2 style="text-align: center;" class="fw-bold mb-4" id="Fuentes-link">Principales fuentes de información</h2>
         <p style="text-align: center; color: grey;">
             Aquí continuación enseñaré todas las fuentes de información que usé para complementar esta página.
         </p>
@@ -197,9 +197,8 @@
             <div class="row text-center">
 
                 <div class="col-md-12">
-                    <h5 class="fw-bold">BiCo</h5>
+                    <h5 class="fw-bold">Grupo1</h5>
                     <p class="mb-1">knight.eclipse78@gmail.com</p>
-                    <p>ventas@bico.com.mx</p>
                 </div>
             </div>
             <div class="row text-center mt-4">
