--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto1</title>
     <link rel="stylesheet" href="style.css">
     <!--bibloteca AOS y Bootstrap    -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
@@ -47,9 +47,12 @@
           
 
             <div class="col-md-6">
-                <h1 class="fw-bold">Régimen<br>Retributario</h1>
-                <p class="fs-5 text-secondary">El régimen retributario es el conjunto de normas que regulan salarios y beneficios laborales que se dividen en 4 secciones cuales hablaremos aqui</p>
-                <button class="btn btn-dark btn-lg">Empezar</button>
+                <h1 class="fw-bold">Régimen<br>Tributario</h1>
+                <p class="fs-5 text-secondary">El régimen tributario es el conjunto de normas que regulan salarios y beneficios laborales que se dividen en 4 secciones cuales hablaremos aqui</p>
+                <a href="#que-es-un-regimen link2">
+                    <button class="btn btn-dark btn-lg">Empezar</button>
+                </a>
+                
                 <div class="d-flex mt-4">
                     <div class="d-flex mt-4">
                         <div class="me-4 text-center">
@@ -79,13 +82,13 @@
             </div>
         </div>
     </div>
-<!-- Que es un regimen retributario -->
+<!-- Que es un regimen tributario -->
     <div class="container-fluid bg-warning py-5">
         <div class="container py-5">
             <div class="row align-items-center text-center text-md-start">
-                <div class="col-md-6" data-aos="fade-right">
+                <div class="col-md-6" data-aos="fade-right" id="que-es-un-regimen link2">
                     <h2 class="fw-bold text-dark fs-2" id="Que es un regimen link">
-                        ¿Que es <br> un regimen retributario?
+                        ¿Que es <br> un regimen tributario?
                     </h2>
                 </div>
                 <div class="col-md-6" data-aos="fade-left">
